@@ -2,6 +2,7 @@ Version 0.9.1 (changes from aircrack-ng 0.9) - Released ?? ??? 2007:
 * airodump-ng: wlan-ng driver now works again.
 * airodump-ng: Fixed IP address when writing to CSV file
 * aircrack-ng: Fixed WPA cracking on SMP computers
+* aircrack-ng: Fixed bug in calc_pmk() function causes wrong PMK to be computed
 * airmon-ng: Fixed madwifi-ng wifiX detection (due to translation in ifconfig)
 * patches: Added ACX injection patch
 * patches: Updated rtl8187 patch for 2.6.21
